--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -17,3 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
+      - uses: actions/upload-artifact@v4
+        with:
+            path: | 
+                "./"
