--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: install name tool
-        run: install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
+        run: |
+          install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
+          install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./GeometryJump
       - uses: actions/upload-artifact@v4
         with:
             path: | 
