--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: |
-          install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
-          install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./GeometryJump
+          install_name_tool -add_rpath @executable_path/Frameworks ./hook.dylib
+          install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./hook.dylib
       - uses: actions/upload-artifact@v4
         with:
             path: | 
