--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -1,10 +1,6 @@
 name: Xcode - Build and Analyze
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -17,10 +13,14 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: |
-          install_name_tool -add_rpath @executable_path/Frameworks ./hook.dylib
-          install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./hook.dylib
-          install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
-          install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./GeometryJump
+          lipo -thin arm64 ./minecraftappletv.hi -output ./minecraftappletv.hi.arm64
+          xcrun vtool -arch arm64 -set-build-version 10.2 10.2 -replace -output ./minecraftappletv.hi.arm64 ./minecraftappletv.hi.arm64
+          xcrun vtool -arch arm64 -show ./minecraftappletv.hi.arm64
+        #run: |
+          #install_name_tool -add_rpath @executable_path/Frameworks ./hook.dylib
+          #install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./hook.dylib
+          #install_name_tool -add_rpath @executable_path/Frameworks ./GeometryJump
+          #install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./GeometryJump
       - uses: actions/upload-artifact@v4
         with:
             path: | 
