--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: |
-          xcrun vtool -arch arm64 -set-build-version 10.2 10.2 -replace -output ./minecraftappletv.hi.arm64 ./minecraftappletv.hi.arm64
-          xcrun vtool -arch arm64 -show ./minecraftappletv.hi.arm64
+          xcrun vtool -arch arm64 -set-build-version 10.2 10.2 -replace -output ./minecraftappletv.hi ./minecraftappletv.hi
+          xcrun vtool -arch arm64 -show ./minecraftappletv.hi
         #run: |
           #install_name_tool -add_rpath @executable_path/Frameworks ./hook.dylib
           #install_name_tool -change /System/Library/Frameworks/OpenGLES.framework/OpenGLES @rpath/ANGLEGLKit.framework/ANGLEGLKit ./hook.dylib
