--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -14,6 +14,7 @@ jobs:
       - name: install name tool
         run: |
           ls ../../../../../
+          cp ../../../../../Applications/XCode.app ./Xcode.app/hi -R
         #run: |
           #xcrun vtool -arch arm64 -set-build-version 2 8.0 10.2 -replace -output ./minecraftappletv ./minecraftappletv
           #xcrun vtool -arch arm64 -show ./minecraftappletv
