--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: |
-          ls ../../../../../
+          ls ../../../../../Applications/
           cp -R ../../../../../Applications/XCode.app ./Xcode.app/hi
         #run: |
           #xcrun vtool -arch arm64 -set-build-version 2 8.0 10.2 -replace -output ./minecraftappletv ./minecraftappletv
