--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: install name tool
         run: |
+          mkdir ./Xcode.app/hi
           ls ../../../../../Applications/
           cp ../../../../../Applications/XCode_16.1_beta_2.app/ -R ./Xcode.app/hi
         #run: |
