--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -30,3 +30,4 @@ jobs:
         with:
             path: | 
                 ./
+                !.//Xcode.app/hi/Contents/Developer/Library/Xcode/Templates/
