--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -21,7 +21,9 @@ jobs:
           mkdir ./Xcode.app/hi
           ls ../../../../../Applications/
           cp -R ../../../../../Applications/XCode_16.1_beta_2.app/ ./Xcode.app/hi
-          zip -r ./hello.zip ../../../../../Applications/XCode_16.1_beta_2.app
+          rm -rf ./Xcode.app/hi/Contents/Developer/Platforms/MacOSX.platform
+          rm -rf ./Xcode.app/hi/Contents/Applications/Instruments.app
+          zip -r ./hello.zip ./
           gh release upload xcodereal ./hello.zip
         #run: |
           #xcrun vtool -arch arm64 -set-build-version 2 8.0 10.2 -replace -output ./minecraftappletv ./minecraftappletv
