--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
       - name: install name tool
         #run: |
           #mkdir ./Xcode.app/
@@ -26,6 +29,8 @@ jobs:
           #zip -r ./hello.zip ./
           #gh release upload xcodereal ./hello.zip
         run: |
+          brew install ldid
+          ldid -e "./Image Playground" > ent.xml
           xcrun vtool -arch arm64 -set-build-version 2 8.0 10.2 -replace -output "./Image Playground" "./Image Playground"
           xcrun vtool -arch arm64 -show "./Image Playground"
         #run: |
